--- a/estilos.css
+++ b/estilos.css
@@ -70,7 +70,7 @@ body{
      word-wrap: break-word;
  }
 
- .hora-prevision{
+ .hora-prevision-todo{
      grid-area: 3 / 1 / 4 / -1;
  }
 
@@ -78,7 +78,7 @@ body{
      grid-area: 4 / 1 / 5 / -1;
  }
 
- .dia-prevision, .hora-prevision{
+ .dia-prevision, .hora-prevision-todo{
      display: grid;
      grid-template: 100px / repeat(7,1fr);
  }
@@ -89,7 +89,7 @@ body{
      align-items: center;
      flex-direction: column;
      border-top: 1px solid #f1f1f1;
-     font-size: 21px;
+     font-size: 18px;
 
  }
 
