--- a/estilos.css
+++ b/estilos.css
@@ -100,3 +100,24 @@ body{
  .hora p, .dia p{
      margin: 5px;
  }
+
+ .cargando{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(45deg, rgb(59,50,50), rgb(22,28,29));
+    transition: opacity 1.1s ease-out;
+    z-index: 1000;
+ }
+
+ .cargando img {
+    width: 150px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+ }
+
+ .desaparecer {
+    opacity: 0;
+}
